fix spacing within Tech section and add text file for easy rendering

--- a/client/components/Tech/Tech.css
+++ b/client/components/Tech/Tech.css
@@ -3,7 +3,6 @@
   color: var(--slate);
   z-index: 1; 
   opacity: 1;
-  /*width: 100vw;*/
   display: flex;
   flex-direction: column;
   background-color: var(--whitish);
@@ -15,15 +14,16 @@
   flex: 0 1 100%;
   margin: auto;
   text-align: center;
+  padding: 100px 0;
 }
 
 .rows {
-  border: 1px solid red;
+  /*border: 1px solid red;*/
   width: 100%;
 }
 
 .row {
-  border: 1px solid goldenrod;
+  /*border: 1px solid goldenrod;*/
   width: 100%;
 }
 
@@ -32,7 +32,6 @@
   font-size: 4em;
   font-style: italic;
   margin-bottom: 1em;
-  margin-top: 2em;
   text-align: center;
 }
 
